--- a/picture-frontend/package.json
+++ b/picture-frontend/package.json
@@ -16,12 +16,15 @@
     "@vueuse/core": "^13.0.0",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.8.2",
+    "echarts": "^5.6.0",
+    "echarts-wordcloud": "^2.1.0",
     "file-saver": "^2.0.5",
     "lodash-es": "^4.17.21",
     "openapi": "^1.0.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-cropper": "^1.1.4",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.0",
     "vue-waterfall2": "^1.10.9"
   },
